--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
       <li><a href="contact us">Contact us</a></li>
     </ul>
   </nav>
-<h1>3 random inages</h1>
+3 random inages
 <img src="https://picsum.photos/id/123/200/300" alt="Random image">
 <img src="https://picsum.photos/id/124/200/300" alt="Random image">
 <img src="https://picsum.photos/id/125/200/300" alt="Random image">
